--- a/src/quiz/style.css
+++ b/src/quiz/style.css
@@ -1,6 +1,6 @@
 
 .container{
-    background-color: #341b43;
+    background-color: #FFF1DC;
     width: 450px;
     min-height: min-content;
     border-radius: 10px;
@@ -8,7 +8,7 @@
     box-shadow: 10px 10px 42px 0px rgba(0,0,0 0.75);
 }
 
-.infopergunta{
+.infoperguntas{
     width: 100%;
     position: relative;
 }
@@ -49,10 +49,10 @@ button{
 
     width: 100%;
     font-size: 16px;
-    background-color: #cc7d45;
+    background-color: #7FBCD2;
     border-radius: 8px;
     padding: 8px;
-    border: 3px solid #362a4d;
+    border: 3px solid #A5F1E9;
     cursor: pointer;
     margin: 0 12px 10;
 
@@ -60,7 +60,8 @@ button{
 }
 
 button:hover{
-    background-color: #2b0f3b;
+    border: 3px solid #7FBCD2;
+    background-color: #A5F1E9;
 }
 
 .pontuacao{
@@ -72,36 +73,119 @@ button:hover{
 }
 
 
-@media screen and (max-width: 320px) {
-    label{
+label{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    left: 0;
+    
+}
+
+@media screen and (min-width:320px) {
+    .container{
         display: flex;
-        justify-self: center;
-        align-self: center;
-        position: absolute;
-        top: 1px;
-        left: 185px;
-        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 240px;
+        min-height: 300px;
+    }
+    .btn{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+
+        width: 200px;
+        min-height: 35px;
+        margin: 4%;
     }
 }
-@media screen and (max-width: 375px) {
-    label{
+@media screen and (min-width:375px) {
+    .container{
         display: flex;
-        justify-self: center;
-        align-self: center;
-        position: absolute;
-        top: 1px;
-        left: 200px;
-        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 300px;
+        min-height: 200px;
+    }
+    .btn{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 250px;
+        min-height: 35px;
+        margin: 3%;
+
     }
 }
-@media screen and (max-width: 425px) {
-    label{
+
+@media screen and (min-width:425px) {
+    .container{
         display: flex;
-        justify-self: center;
-        align-self: center;
-        position: absolute;
-        top: 1px;
-        left: 210px;
-        margin-top: 10px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 340px;
+        min-height: 200px;
+    }
+    .btn{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 290px;
+        min-height: 35px;
+        margin: 2%;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 600px;
+        min-height: 600px;
+    }
+    .btn{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        min-width: 250px;
+        max-width: 550px;
+        min-height: 35px;
+        max-height: 50px;
+        margin: 2%;
+    }
+}
+
+
+@media screen and (min-width:1024px) {
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 800px;
+        min-height: 600px;
+    }
+    .btn{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        min-width: 250px;
+        max-width: 550px;
+        min-height: 35px;
+        max-height: 50px;
+        margin: 2%;
     }
 }
